<resources>
    <string name="app_name">PrimeraApp</string>
    <string name="login_text">Login</string>
    <string name="go_res">Go to Register</string>
    <string name="email_Holder">Email</string>
    <string name="password_Holder">Password</string>
    <string name="logged_in">Logged in</string>
    <string name="name_Holder">Name</string>
    <string name="register_text">Sign In</string>
    <string name="goto_login">Go  to login</string>

    <string name="registered">Registered</string>


    <!-- Errors -->
    <string name="error_email">Email is required</string>
    <string name="error_email_format">Invalid email</string>
    <string name="error_password">Password is required</string>
    <string name="error_name">Name is required</string>
    <string name="no_match">No match</string>
    <string name="logout">Log out</string>

    <string name="task_name">Task name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="want_to_delete">Do you want to delete this item?</string>
    <string name="Yes">Yes</string>
    <string name="clear_list">Clear List</string>
    <string name="want_to_delete_all">Do you want to delete all items in the list</string>

    <string name="my_tasks">My tasks</string>
    <string name="profile">Profile</string>

    <string name="email_placeholder">admin@email.com</string>
    <string name="name_placeholder">Alexis Fallas</string>
    <string name="avatar_description">avatar</string>

</resources>